# custom_targets

./: CMakeLists.txt  README.md  custom_targets.json  custom_targets.json5
TARGET_NXP/TARGET_LPC81X/: serial_api.c
TARGET_NXP/TARGET_LPC81X/TARGET_NODE_LPC812/: PinNames.h
TARGET_NXP/TARGET_LPC82X/: serial_api.c
TARGET_NXP/TARGET_LPC82X/TARGET_NODE_LPC824/: PinNames.h
TARGET_STM/: CMakeLists.txt
TARGET_STM/TARGET_STM32F1/TARGET_BLUEPILL_F103CB/: PeripheralPins.c
TARGET_STM/TARGET_STM32F1/TARGET_BLUEPILL_F103CB/device/TOOLCHAIN_GCC_ARM/: STM32F103XB.ld
TARGET_STM/TARGET_STM32F1/TARGET_BLUEPILL_F103RB/: PinNames.h
TARGET_STM/TARGET_STM32F4/: CMakeLists.txt
TARGET_STM/TARGET_STM32F4/TARGET_STM32F401xC/TARGET_WEACT_F401CC/: PeripheralPins.c  system_clock.c
TARGET_STM/TARGET_STM32F4/TARGET_STM32F401xE/TARGET_WEACT_F401CE/: system_clock.c
TARGET_STM/TARGET_STM32F4/TARGET_STM32F407xE/: CMakeLists.txt
TARGET_STM/TARGET_STM32F4/TARGET_STM32F407xE/TARGET_STM32F407VE_BLACK/: CMakeLists.txt  PinNames.h  USBPhy_STM32F407VE.cpp_  stm32f4_eth_conf.c  stm32f4_eth_init.c  system_clock.c  system_clock_custom.c
TARGET_STM/TARGET_STM32F4/TARGET_STM32F407xG/TARGET_DEVEBOX_F407VG/: PeripheralPins.c  PinNames.h
TARGET_STM/TARGET_STM32F4/TARGET_STM32F407xG/TARGET_IMSMU_F407VG/: PeripheralPins.c  PinNames.h  system_clock.c
TARGET_STM/TARGET_STM32F4/TARGET_STM32F411xE/TARGET_BLACKPILL_F411CE/: PinNames.h  system_clock.c
TARGET_STM/TARGET_STM32F4/TARGET_STM32F411xE/TARGET_WEACT_F411CE/: PinNames.h
TARGET_STM/TARGET_STM32F7/TARGET_STM32F746xG/TARGET_IMSLA_F746VG/: PinNames.h  stm32f7_eth_init.c  system_clock.c
TARGET_STM/TARGET_STM32H7/TARGET_STM32H743xI/TARGET_DEVEBOX_H743VI/: PinNames.h
TARGET_STM/TARGET_STM32H743xI/TARGET_DEVEBOX_H743VI/: PeripheralPins.c  system_clock.c
TARGET_STM/TARGET_STM32H743xI/TARGET_DEVEBOX_H743ZI/: PeripheralPins.c  PinNames.h  system_clock.c
TARGET_STM32F1/TARGET_BLUEPILL_F103CB/: PeripheralNames.h  PinNames.h
TARGET_STM32F4/: CMakeLists.txt
TARGET_STM32F4/TARGET_DEVEBOX_F407VG/: CMakeLists.txt  PinNames.h  system_clock.c
TARGET_STM32F4/TARGET_IMSMU_F407VG/: PinNames.h  stm32f4_eth_init.c  system_clock.c
TARGET_STM32F4/TARGET_JZ_F407VE/: CMakeLists.txt  PeripheralNames.h  PinNames.h  stm32f4_eth_init.c  system_clock.c
TARGET_STM32F4/TARGET_STM32F407VE_BLACK/: PeripheralPins.c  stm32f4_eth_init.c
TARGET_STM32F4/TARGET_WEACT_F401CC/: PinNames.h
TARGET_STM32F4/TARGET_WEACT_F411CE/: CMakeLists.txt  PinNames.h  system_clock.c
TARGET_STM32H7/: CMakeLists.txt
TARGET_STM32H7/TARGET_DEVEBOX_H743VI/: CMakeLists.txt  PinNames.h  system_clock.c
TARGET_STM32H7/TARGET_FK743M2_IIT6/: CMakeLists.txt  PeripheralPins.c  PinNames.h  fmc.cpp  fmc.h
TARGET_STM32H7/TARGET_FK743M5_XIH6/: CMakeLists.txt  PinNames.h  fmc.cpp
